@@ -5,6 +5,9 @@
 
 - Added support for Python 3.2 and 3.3.
 
+- ``httpok`` now allows multiple expected status codes to be specified.  Patch
+  by valmiRe.
+
 0.12 (2016-09-03)
 -----------------
 
